Fix layout issues

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,11 @@ html {
     margin: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 * {
@@ -117,17 +122,6 @@ code {
     font-family: "Menlo", "Meslo", "Consolas", monospace;
 }
 
-.fill,
-main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .row {
     flex: 1;
     width: 100%;
@@ -148,6 +142,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden; // Needed to scale-down items being contained
 
     .ace_editor {
         flex: 1;
